plugins {
    id 'checkstyle'
    alias libs.plugins.gitVersion
    id 'idea'
    id 'java'
    alias libs.plugins.mavenPublish
    id 'net.fabricmc.fabric-loom'
    //id 'net.neoforged.gradle.userdev'
    alias libs.plugins.shadow
}

def git = versionDetails()
def tag = git.lastTag.substring(1)
if (System.getenv('GITHUB_ACTIONS') == 'true') {
    if (System.getenv('GITHUB_WORKFLOW') == 'Release') {
        version = tag
    } else if (System.getenv('PULL_REQUEST')) {
        version = "${tag}${tag.contains('-') ? '.' : '-'}SNAPSHOT.pr.${System.getenv('PULL_REQUEST')}.${System.getenv('GITHUB_RUN_NUMBER')}"
    } else {
        version = "${tag}${tag.contains('-') ? '.' : '-'}SNAPSHOT.${System.getenv('GITHUB_RUN_NUMBER')}"
    }
} else {
    version = "${tag}${tag.contains('-') ? '.' : '-'}SNAPSHOT"
}

group = 'org.mcaccess'
base.archivesName = 'minecraft-access'

loom {
    log4jConfigs.from(file('./log4j.xml'))
    runs {
//        fabric {
//            inherit client
//            runDir = './run/fabric/'
//        }
        remove client
        remove server
    }
    runConfigs.configureEach {
        vmArgs '-ea'
    }
}

//runs {
//    neoforge {
//        runType 'client'
//        workingDirectory file('./run/neoforge/')
//    }
//    configureEach {
//        jvmArguments '-ea'
//    }
//}

idea {
    module {
        excludeDirs += file('./run/')
        excludeDirs += file('./logs/')
    }
}

dependencies {
    minecraft libs.minecraft
    compileOnly libs.fabricLoader
    compileOnly libs.neoForge

    compileOnly libs.modMenu
    compileOnly libs.jadeFabric
    compileOnly libs.balmCommon
    compileOnly libs.balmFabric
    compileOnly libs.balmNeoForge
    compileOnly libs.clothConfigCommon
    implementation libs.tolk

    include libs.fabricApi
    include libs.balmFabric
    include libs.clothConfigFabric

    //jarJar libs.balmNeoForge
    //jarJar libs.clothConfigNeoForge

    compileOnly libs.lombok
    annotationProcessor libs.lombok

    testImplementation libs.junitJupiter
    testImplementation libs.junitJupiterParams
    testRuntimeOnly libs.junitPlatformLauncher
    testImplementation libs.assertjCore
    testImplementation libs.mockitoCore
    testImplementation libs.mockitoJunitJupiter
    testCompileOnly libs.lombok
    testAnnotationProcessor libs.lombok

    checkstyle libs.checkstyle
}

compileJava {
    options.encoding = 'UTF-8'
    options.release = 25
    options.compilerArgs << '-proc:full'
}

java {
    withSourcesJar()
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

checkstyle {
    toolVersion = libs.checkstyle.get().version
}

test {
    useJUnitPlatform()
    jvmArgs('-XX:+EnableDynamicAgentLoading')
}

javadoc {
    include 'org/mcaccess/minecraftaccess/api/**'
    title = "Minecraft Access ${rootProject.version} API"
    options {
        tags(
                'apiNote:a:API Note:',
                'implSpec:a:Implementation Requirements:',
                'implNote:a:Implementation Note:',
        )
        keyWords true
        linkSource true
        links(
                'https://javadoc.io/doc/org.jetbrains/annotations/latest/',
        )
    }
}

mavenPublishing {
    publishToMavenCentral()
    signAllPublications()
    coordinates project.group, base.archivesName.get(), rootProject.version
    pom {
        name = 'Minecraft Access'
        description = 'A mod for minecraft java (fabric/neoforge) that specifically helps visually impaired players play Minecraft.'
        url = 'https://mcaccess.org/'
        inceptionYear = '2022'
        licenses {
            license {
                name = 'GPL-3.0-only'
                url = 'https://www.gnu.org/licenses/gpl-3.0.en.html'
            }
        }
        organization {
            name = 'Minecraft Access'
            url = 'https://github.com/minecraft-access'
        }
        developers {
            developer {
                id = 'khanshoaib3'
                name = 'Mohammad Shoaib Khan'
                url = 'https://github.com/khanshoaib3'
                roles = [
                        'Owner',
                ]
            }
            developer {
                id = 'sgmedev'
                name = 'Joel Hooimeyer'
                email = 'me@sgme.dev'
                url = 'https://github.com/sgmedev'
                timezone = 'Australia/Sydney'
                roles = [
                        'Maintainer',
                ]
            }
            developer {
                id = 'BrailleBennett'
                name = 'Braille Bennett'
                url = 'https://github.com/BrailleBennett'
                timezone = 'America/Chicago'
            }
        }
        contributors {
            contributor {
                name = 'Boholder'
                url = 'https://github.com/boholder'
            }
            contributor {
                name = 'Vjeran Bezik'
                url = 'https://github.com/Molitvan'
            }
            contributor {
                name = 'emassey0135'
                url = 'https://github.com/emassey0135'
            }
        }
        issueManagement {
            system = 'GitHub'
            url = 'https://github.com/minecraft-access/minecraft-access/issues'
        }
        ciManagement {
            system = 'GitHub Actions'
            url = 'https://github.com/minecraft-access/minecraft-access/actions'
        }
        scm {
            connection = 'scm:git:https://github.com/minecraft-access/minecraft-access'
            developerConnection = 'scm:git:git@github.com:minecraft-access/minecraft-access'
            url = 'https://github.com/minecraft-access/minecraft-access'
        }
    }
}
